# servertime

./: Cargo.toml  LICENSE-MPL
src/: average.rs  http.rs  lib.rs  range.rs  slice.rs
src/http/: body.rs  client.rs
