[package]
name = "servertime"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["io-util", "net", "time"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
futures-lite = "2.3"
http = "1"
httpdate = "1"
httparse = "1"
pin-project-lite = "0.2"
webpki-roots = "0.26"

[features]
binary = ["tokio/rt"]

[[bin]]
name = "yonsei"
required-features = ["binary"]